--- a/.github/workflows/stats19.yml
+++ b/.github/workflows/stats19.yml
@@ -4,6 +4,9 @@ on:
         branches:
             - main
     workflow_dispatch:
+env:
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
 jobs:
     build_stats19:
         runs-on: ubuntu-latest
@@ -25,3 +28,29 @@ jobs:
               with:
                 name: stats19
                 path: ./stats19.sqlite
+    bundle_stats19:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Download database
+              uses: actions/download-artifact@v3
+              with:
+                name: stats19
+                path: ./
+            - name: Log in to the Container registry
+              uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+              with:
+                registry: ${{ env.REGISTRY }}
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+            - name: Extract metadata (tags, labels) for Docker
+              id: meta
+              uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+              with:
+                images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+            - name: Build and push Docker image
+              uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+              with:
+                context: .
+                push: true
+                tags: ${{ steps.meta.outputs.tags }}
+                labels: ${{ steps.meta.outputs.labels }}
